--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
     <nav>
         <ul>
-            <li><a href="#">link-one</a></li>
-            <li><a href="#">link-two</a></li>
-            <li><a href="#">link-three</a></li>
-            <li><a href="#">link-four</a></li>
-            <li><a href="#">link-five</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">All products</a></li>
+            <li><a href="#">Support</a></li>
+            <li><a href="#">Login</a></li>
         </ul>
     </nav>
     
