fix the video name

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     
     <main>
         <aside>
-            <video src="./images/gtr33mp4" autoplay muted loop></video>
+            <video src="./images/gtr33.mp4" autoplay muted loop></video>
         </aside>
 
         <section>
